# derail

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
resources/: Info.plist
src/: AppDelegate.mm  main.mm
src/macos/: WindowTracker.h  WindowTracker.mm
